# audio

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  libaudio++-dev.install  libaudio++.install
lib/: CMakeLists.txt  audio++.hpp  converter.cpp  device.cpp  error.cpp  internal.cpp  internal.hpp  mixer.cpp  params.cpp
lib/audio++/: converter.hpp  device.hpp  error.hpp  mixer.hpp  params.hpp  span.hpp  types.hpp  vector.hpp
